Crash Rendering (Cycles/Cuda) #44222

Closed
opened 2015-04-01 20:31:32 +02:00 by B-Lee · 17 comments

System Information
Window 7 64-bit and Nvidia GeForce GTX 760

Blender Version
Broken: 2.74

Short description of error

A simple nodes setup shown on the top part of the image, with GPU rendering in both F12 or viewport render, it happen to be crash as shown at the bottom part of the image.
Tested with CPU render in viewport render mode, when adjusting/draging the ColorRamp node gradient bar, it having some stall/freeze situation for more or less of a second.

Bug_01.jpg

**System Information** Window 7 64-bit and Nvidia GeForce GTX 760 **Blender Version** Broken: 2.74 **Short description of error** A simple nodes setup shown on the top part of the image, with GPU rendering in both F12 or viewport render, it happen to be crash as shown at the bottom part of the image. Tested with CPU render in viewport render mode, when adjusting/draging the ColorRamp node gradient bar, it having some stall/freeze situation for more or less of a second. ![Bug_01.jpg](https://archive.blender.org/developer/F157117/Bug_01.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
B-Lee self-assigned this 2015-04-01 20:31:32 +02:00
Author

Added subscriber: @toki46-3

Added subscriber: @toki46-3
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

We need a bit more information from you so let me give you some homework:

  • Information about what kind of operating system and graphics card you use might be helpful
  • Try the latest build from our buildbot .(Not Gooseberry)
  • Ensure both your OS and drivers are fully up-to-date
  • For Windows 7, at least Service Pack 1 is mandatory, please ensure it is installed on your machine.
  • Ensure you have installed MSVC2013 redistributable package .
  • Try to disable any running antivirus.
  • Ensure you have no python executable available in your %path% envvar.
  • Try to re-download and re-install Blender.
  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • If you are using Win7, Try to place this dll next to your blender.exe (software OGL, will be slow, but will show whether this is a driver issue or not).
    (and again, more or less copied & pasted from Bastien)

Think that's enough for now... ;)

(Copied from Julian :)

We need a bit more information from you so let me give you some homework: * Information about what kind of operating system and graphics card you use might be helpful * Try the latest build from our [buildbot ](https://builder.blender.org/download/).(**Not Gooseberry**) * Ensure both your OS and drivers are fully up-to-date * For Windows 7, at least Service Pack 1 is mandatory, please ensure it is installed on your machine. * Ensure you have installed [MSVC2013 redistributable package ](http://www.microsoft.com/en-us/download/details.aspx?id=40784). * Try to disable any running antivirus. * Ensure you have no python executable available in your %path% envvar. * Try to re-download and re-install Blender. * Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not). * If you are using Win7, Try to place [this dll ](http://download.blender.org/ftp/sergey/softwaregl/win64/opengl32.dll) next to your blender.exe (software OGL, will be slow, but will show whether this is a driver issue or not). (and again, more or less copied & pasted from Bastien) Think that's enough for now... ;) (Copied from Julian :)
B-Lee was unassigned by Aaron Carlisle 2015-04-01 21:34:34 +02:00

Added subscriber: @chrisr

Added subscriber: @chrisr

Hey, I can confirm this bug.

  • I have Win7 64, SP1, Nvidia GTX 560Ti, driver 347.88 (17 March).
  • Latest buildbot, and my own build from latest master both have this.
  • Check!
  • Check!
  • Check!
  • Check!
  • Check!
  • Check!
  • Check!
  • Check!

Here is a file I ended up creating: bug.blend. To reproduce the bug: Set device to CUDA, F12 to render -> exact same error as @toki46-3 had and complete blender crash.
Listing from console after the bug:

CUDA error: Unknown error in cuCtxSynchronize()

Refer to the Cycles GPU rendering documentation for possible solutions:
http://www.blender.org/manual/render/cycles/gpu_rendering.html

CUDA error: Unknown error in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size)
CUDA error: Unknown error in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size)
CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: Unknown error in cuMemAlloc(&device_pointer, size)
CUDA error: Unknown error in cuMemAlloc(&device_pointer, size)
(...) - around 264 of these
CUDA error: Unknown error in cuMemAlloc(&device_pointer, size)
CUDA error: Unknown error in cuMemAlloc(&device_pointer, size)
CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer))
(...) - around 18 of these
CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer))
AL lib: (EE) alc_cleanup: 1 device not closed
Hey, I can confirm this bug. - I have Win7 64, SP1, Nvidia GTX 560Ti, driver 347.88 (17 March). - Latest buildbot, and my own build from latest master both have this. - Check! - Check! - Check! - Check! - Check! - Check! - Check! - Check! Here is a file I ended up creating: [bug.blend](https://archive.blender.org/developer/F157197/bug.blend). To reproduce the bug: Set device to CUDA, F12 to render -> exact same error as @toki46-3 had and complete blender crash. Listing from console after the bug: ``` CUDA error: Unknown error in cuCtxSynchronize() Refer to the Cycles GPU rendering documentation for possible solutions: http://www.blender.org/manual/render/cycles/gpu_rendering.html CUDA error: Unknown error in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size) CUDA error: Unknown error in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size) CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: Unknown error in cuMemAlloc(&device_pointer, size) CUDA error: Unknown error in cuMemAlloc(&device_pointer, size) (...) - around 264 of these CUDA error: Unknown error in cuMemAlloc(&device_pointer, size) CUDA error: Unknown error in cuMemAlloc(&device_pointer, size) CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer)) (...) - around 18 of these CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: Unknown error in cuMemFree(cuda_device_ptr(mem.device_pointer)) AL lib: (EE) alc_cleanup: 1 device not closed ```

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I seem to require a large quantity of memory.

I seem to require a large quantity of memory.
Author
  • Windows 7 64bit SP1, Nvidia GeForce GTX 760 (driver ver: 347.88) latest driver release date: 3/17/2015
  • Windows 64 bit Official blender-2.74-4b84759-win64.zip
  • Check
  • Check
  • Check
  • Check
  • Check
  • Check
  • Check
  • Check

After doing all above, new test with latest buildbot is still the same, only difference is blender still operate instead of totally crash.
Here are both viewport render and F12 render test.
Bug_2.jpg

- Windows 7 64bit SP1, Nvidia GeForce GTX 760 (driver ver: 347.88) latest driver release date: 3/17/2015 - Windows 64 bit Official blender-2.74-4b84759-win64.zip - Check - Check - Check - Check - Check - Check - Check - Check After doing all above, new test with latest buildbot is still the same, only difference is blender still operate instead of totally crash. Here are both viewport render and F12 render test. ![Bug_2.jpg](https://archive.blender.org/developer/F157401/Bug_2.jpg)

Added subscribers: @Sergey, @ThomasDinges, @Psy-Fi

Added subscribers: @Sergey, @ThomasDinges, @Psy-Fi

@Blendify, this is only to be copied in certain bugs that look like OpenGL failures or crashes that cannot be reproduced by others. It's good that you want to help, but the best way users can help is by confirming that a bug occurs for them. Generally merging tasks and such replies should be done by developers (who can evaluate if something really is a bug in our code or not, in which case we check for crappy drivers etc).

And finally, summoning @ThomasDinges or @Sergey here to take a look.

At reporter: A blend file is -always- better than a picture and means we are on the same page - which is often not the issue if we try to recreate the file here.

@Blendify, this is only to be copied in certain bugs that look like OpenGL failures or crashes that cannot be reproduced by others. It's good that you want to help, but the best way users can help is by confirming that a bug occurs for them. Generally merging tasks and such replies should be done by developers (who can evaluate if something really is a bug in our code or not, in which case we check for crappy drivers etc). And finally, summoning @ThomasDinges or @Sergey here to take a look. At reporter: A blend file is -always- better than a picture and means we are on the same page - which is often not the issue if we try to recreate the file here.
Member

Well since the picture shows a crashing driver it was probably a good idea

Well since the picture shows a crashing driver it was probably a good idea
Campbell Barton changed title from Blender Crash to Crash Rendering (Cycles/Cuda) 2015-04-06 05:35:09 +02:00
Sergey Sharybin self-assigned this 2015-04-06 09:47:15 +02:00

Pointiness is a surface attribute, can't really be used for volume. But crash should not happen as well. Will have a look into this.

Pointiness is a surface attribute, can't really be used for volume. But crash should not happen as well. Will have a look into this.

This issue was referenced by 3639a70eae

This issue was referenced by 3639a70eaec1d49e5634f2cd5f6d4ecb7d79ef14

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3639a70eae.

Closed by commit 3639a70eae.

This issue was referenced by blender/cycles@fb24b84c3a

This issue was referenced by blender/cycles@fb24b84c3a5d8f3bf5dc1929dde6e580495dd5d9
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44222
No description provided.